# RAG-web-Crawler

./: .gitignore  README.md  config.yaml  docker-compose.yaml  pyproject.toml
openspec/changes/archive/2026-03-19-refine-readme-to-prd/: proposal.md
openspec/changes/archive/2026-03-19-refine-readme-to-prd/specs/vector-store/: spec.md
openspec/changes/refine-readme-to-prd/: design.md  tasks.md
openspec/changes/refine-readme-to-prd/specs/web-crawler/: spec.md
openspec/specs/document-processor/: spec.md
openspec/specs/rag-query/: spec.md
src/rag_crawler/: __init__.py  cli.py  config.py
src/rag_crawler/api/: __init__.py  app.py  llm_answer.py
src/rag_crawler/crawler/: __init__.py  crawler.py  url_reader.py
src/rag_crawler/processor/: __init__.py  chunker.py  cleaner.py  llm_converter.py  markdown_writer.py  processor.py
src/rag_crawler/store/: __init__.py  embedding.py  exporter.py  milvus_client.py  searcher.py  writer.py
tests/: test_api.py  test_chunker.py  test_cleaner.py  test_config.py  test_crawler.py  test_integration.py  test_markdown_writer.py  test_processor.py  test_store.py  test_url_reader.py
